2.3.0
- add generalized scraping for sources as fallback if url does not resolve
- add dash and smil support
- add basic mimetype detection
- add content type support (video audio image)

2.2.5
- export to .m3u now exports PlayThis plugin url instead of resolved url
    allows resolution at playback, resolves expired session/token/ip issues, m3u only usable in Kodi w/ PlayThis

2.2.3
- external resolver updates
	+ ol, use api until updated in urlresolver
	- twitch, included in urlresolver

2.2.2
- add 'Add to history on play' to Settings
- reorganize Settings menu

2.2.1
- fix error on 'New ...' if no input

2.2.0
- delete now uses row_id instead of url
- add Export to M3U

2.1.3
- add route to add to history without playback
- ?mode=add&path=http%3A%2F%2Fexample.com%2F

2.1.2
- twitch resolver updates

2.1.1
- add URLResolver Settings action to Settings
- add twitch resolver, resolve twitch urls and play using plugin.video.twitch

2.1.0
- add directory listing of history
- add 'Delete from history' context menu for directory listing
    - enables 'Delete from history', 'Add to favorites', and the rest of the Kodi default context items
- set directory listing to default
- add optional &history=true/false to mode=play
- history=true default, keeps history of items played from plugin url

2.0.2
- fix playback from strm files
- changes to url/route for strm files |req'd| &player=false

2.0.1
- fix improper resolver issue

2.0.0
- re-write of smokdpi's PlayThis