@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.playthis"
        name="PlayThis"
-       version="2.3.0~alpha2"
+       version="2.3.0~alpha3"
        provider-name="anxdpanic">
     <requires>
         <import addon="xbmc.python" version="2.20.0"/>
-		<import addon="repository.tva.common"/>	
         <import addon="script.module.urlresolver" version="3.0.23"/> <!-- .24 (current github master) -->
     </requires>
     <extension point="xbmc.python.pluginsource" library="resources/lib/__run__.py">
@@ -17,6 +16,11 @@
 - add dash and smil support
 - add basic mimetype detection
 - add content type support (video audio image)
+- add attempt to identify and support quicktime atom  ** thanks @tknorris
+- increased history size limits, applies to ALL content types as use cases my still be limited to one type
+- add parsing of google/reddit redirect links (subreddits, google search give playable results)
+- export to M3U exports content specific list
+- delay adding to history until potentially valid source found
         </news>
         <assets>
             <icon>icon.png</icon>
